# nir

./: README.md  main.cpp
source/: .CMakeLists.txt.swp  .serial.cpp.swp  .serial.h.swp  .test_serial.cpp.swp  CMakeLists.txt  Makefile  auto_exposure.cpp  camera.cpp  camera.h  config-new-1.xml  config-new.xml  config.xml  config_parser.hpp  dummy.cpp  exponential_fit.m  filter_wheel.cpp  filter_wheel.h  filter_wheel_manager.cpp  filter_wheel_manager.h  filterwheel.cpp  filterwheel.h  filterwheel_manager.h  flat_field.cpp  linear_characteristic.m  logger.cpp  logger.h  main.cpp  rgb_overlay.cpp  save.sh  serial.cpp  serial.h  serial_windows.cpp  serial_windows.h  stats.sh  stereomain.cpp  test_camera.cpp  test_filterwheel.cpp  test_fits.cpp  test_logger.cpp  test_serial.cpp  (+1 more)
